# scpa

./: .envrc  .gitignore  CMakeLists.txt  README.md  configuration.ini  requirements.txt  run.sh
common/: matrix.c  matrix.h  matrix_generator.c  utils.c  utils.h
cuda/: CMakeLists.txt  main.cu
graphs/: main.py
mpi/: CMakeLists.txt  main.c  utils.c  utils.h
omp/: CMakeLists.txt  main.c
output/: mpi-omp-v1.csv  mpi-omp-v2.csv  mpi-v1.csv  mpi-v2.csv  omp.csv
scripts/: clean.sh  graphs.sh  run.sh
src/common/: matrix.c  matrix.h  utils.c  utils.h
src/generator/: CMakeLists.txt  main.c
src/graphs/: main.py  rectangle.py  square.py  utils.py
src/mpi/: CMakeLists.txt  main-collective.c  main-v1.c  main-v2.c  main.c  utils.c  utils.h
src/omp/: CMakeLists.txt  main.c
